[autheticate endpoint]
